New Lesson, Changed Project name

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaReview.jar
+dist.jar=${dist.dir}/Grade12Lessons.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
